# iotShield

./: README.md
ataques_ciberneticos/: brute_force.py  comandos.txt  requirements.txt  slowite_attack.py
codigo_iot/esp32_code/pub_intensityMQTT/: authentication.h  pub_intensityMQTT.ino
codigo_iot/esp32_code/pub_moveMQTT/: authentication.h  pub_moveMQTT.ino
codigo_iot/esp32_code/pub_temperatureMQTT/: authentication.h  pub_temperatureMQTT.ino
codigo_iot/esp32_code/sub_intensityMQTT/: authentication.h  sub_intensityMQTT.ino
documentos/: Configuracion y dependencias.docx  Manual de usuario.docx  Tasks.txt
iot_shield_datasets/: preparacion_datos.py
iot_shield_datasets/Raw Data/csv/: bruteforce.csv  legitimate_test.csv  slowite.csv
iot_shield_datasets/Raw Data/pcap/: bruteforce.pcap  flood_connection.pcap  legitimate_test.pcap  slowite.pcap
modelo_no_supervisado/IoTShield/: iotshield_model_tiny.ipynb  model.tflite
modelo_no_supervisado/IoTShield/datasets/: bruteforce.csv  slowite.csv
modelo_no_supervisado/IoTShield/saved_model/model/: fingerprint.pb  keras_metadata.pb  saved_model.pb
modelo_no_supervisado/IoTShield/saved_model/model/variables/: variables.data-00000-of-00001  variables.index
rpi_cpp_projects/: Instalacion
rpi_cpp_projects/inferencia-iotshield/: CMakeLists.txt
rpi_cpp_projects/inferencia-iotshield/archivos/: device_1.uf2  device_2.uf2  notas
rpi_cpp_projects/inferencia-iotshield/model-parameters/: model_metadata.h  model_variables.h
rpi_cpp_projects/inferencia-iotshield/source/include/: config.hpp  mqtt_module.hpp
rpi_cpp_projects/inferencia-iotshield/source/src/: main.cpp  mqtt_module.cpp
rpi_cpp_projects/inferencia-iotshield/tflite-model/: tflite_learn_3.h
sistema_distribucion/: capture_data.py  config.py  email_handler.py  main.py  mqtt_clients.py  requirements.txt  scaler.pkl
